<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/textCalculation"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="#CFCCCC"
        android:gravity="end"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@+id/button0" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="#CFCCCC"
        android:gravity="end"
        android:text="@string/Zero"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/textCalculation"
        app:layout_constraintStart_toStartOf="@+id/textCalculation" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/Divide"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintStart_toStartOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subtract"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Multiply"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintStart_toStartOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Calculate"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Reset"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/One"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Two"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Three"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Four"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Five"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Six"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seven"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Eight"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Nine"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:text="@string/Zero"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>